Multi file and optimized better

--- a/web/cold/footer.ejs
+++ b/web/cold/footer.ejs
@@ -1,3 +1,11 @@
+<!--
+// =====================================
+// Footer
+// Created by Person0z
+// Copyright (c) 2025 Zluqe
+// =====================================
+-->
+
 <footer class="footer">
     <div class="container">
         <p>Powered by <a href="https://zluqe.org/" target="_blank">Zluqe</a>
