--- a/web/cold/head.ejs
+++ b/web/cold/head.ejs
@@ -1,3 +1,11 @@
+<!--
+// =====================================
+// Head 
+// Created by Person0z
+// Copyright (c) 2025 Zluqe
+// =====================================
+-->
+
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta property="og:url" content="https://paste.zluqe.org/">
