--- a/web/errors/404.ejs
+++ b/web/errors/404.ejs
@@ -1,3 +1,11 @@
+<!--
+// =====================================
+// 404 error page
+// Created by Person0z
+// Copyright (c) 2025 Zluqe
+// =====================================
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,7 +22,9 @@
       <a href="/">Create New Paste</a>
     </div>
   </div>
-
+  <div>
+    
+  </div>
   <%- include('../cold/footer') %>
 </body>
 </html>
