--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,11 @@
+/*
+// =====================================
+// Style file for Zluqe
+// Created by Person0z
+// Copyright (c) 2025 Zluqe
+// =====================================
+*/
+
 :root {
     --bg-color: #0a0a0a;
     --surface-color: #1a1a1a;
