--- a/web/errors/too_large.ejs
+++ b/web/errors/too_large.ejs
@@ -1,3 +1,11 @@
+<!--
+// =====================================
+// too large error page
+// Created by Person0z
+// Copyright (c) 2025 Zluqe
+// =====================================
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
