--- a/web/index.ejs
+++ b/web/index.ejs
@@ -1,3 +1,11 @@
+<!--
+// =====================================
+// Index Page
+// Created by Person0z
+// Copyright (c) 2025 Zluqe
+// =====================================
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
