--- a/web/view_paste.ejs
+++ b/web/view_paste.ejs
@@ -1,3 +1,11 @@
+<!--
+// =====================================
+// View Paste
+// Created by Person0z
+// Copyright (c) 2025 Zluqe
+// =====================================
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
